--- a/WordQuiz/WordQuiz/AppShell.xaml
+++ b/WordQuiz/WordQuiz/AppShell.xaml
@@ -83,7 +83,7 @@
                 
                 
                 <Image Aspect="AspectFill"
-                   Source="RegisterBackground.png"
+                   Source="background4.png"
                    Opacity="0.6" />
                 <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                     <Label Text="Woodle" TextColor="White" FontFamily="OpenSans-BoldItalic" FontSize="40" CharacterSpacing="4"
