--- a/WordQuiz/WordQuiz/Views/MainPage.xaml
+++ b/WordQuiz/WordQuiz/Views/MainPage.xaml
@@ -4,13 +4,14 @@
              x:Class="WordQuiz.Views.MainPage" BackgroundColor="White" >
     <ContentPage.Content>
         <Grid >
+            <Image Source="Background2.png" Aspect="AspectFill" Opacity="0.9" />
             <forms:AnimationView x:Name="AnimationView" Animation="" AutoPlay="True"  WidthRequest="300" HeightRequest="300" Margin="0,40,0,0"
                 Loop="True" VerticalOptions="StartAndExpand" HorizontalOptions="CenterAndExpand" />
 
                 <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" Margin="20,20,20,100"  >
 
 
-                    <Button CornerRadius="20" Text="New Game" FontSize="Large" FontFamily="OpenSans-Bold" x:Name="NewGame" Clicked="NewGame_Clicked" BorderColor="Gray" BorderWidth="3" WidthRequest="250" HeightRequest="60" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                    <Button CornerRadius="20" Text="New Game" FontSize="Large" FontFamily="OpenSans-Bold" x:Name="NewGame" Clicked="NewGame_Clicked" BorderColor="WhiteSmoke" BorderWidth="3" WidthRequest="250" HeightRequest="60" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                         <Button.ImageSource>
                             <FontImageSource Glyph="&#xf11b;" FontFamily="fa-solid"/>
                         </Button.ImageSource>
