--- a/WordQuiz/WordQuiz/Views/GameLevelPopup.xaml
+++ b/WordQuiz/WordQuiz/Views/GameLevelPopup.xaml
@@ -19,9 +19,9 @@
             
         <StackLayout>
                 <Label Text="Select Type" FontFamily="OpenSans-Bold" FontSize="Medium" />
-                <RadioButton Text="Words" IsChecked="true" x:Name="RdWords" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
+                <RadioButton Content="Words" IsChecked="true" x:Name="RdWords" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
                 <!--<RadioButton Text="Idioms" x:Name="RdIdioms" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>-->
-                <RadioButton Text="Animals" x:Name="RdAnimals" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
+                <RadioButton Content="Animals" x:Name="RdAnimals" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
                 <!--<RadioButton Text="TV Shows" x:Name="RdTV" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
                 <RadioButton Text="Books" x:Name="RdBooks" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
                 <RadioButton Text="Movies" x:Name="RdMovies" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold" />
@@ -32,10 +32,10 @@
 
         <StackLayout x:Name="levelSelector">
                 <Label Text="Select Level" FontFamily="OpenSans-Bold" FontSize="Medium"/>
-                <RadioButton Text="Easy" IsChecked="true" x:Name="rdEasy" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
-                <RadioButton Text="Moderate" x:Name="rdModerate" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
-                <RadioButton Text="Hard" x:Name="rdHard" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
-                <RadioButton Text="Very Hard"  x:Name="rdVeryHard" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
+                <RadioButton Content="Easy" IsChecked="true" x:Name="rdEasy" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
+                <RadioButton Content="Moderate" x:Name="rdModerate" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
+                <RadioButton Content="Hard" x:Name="rdHard" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
+                <RadioButton Content="Very Hard"  x:Name="rdVeryHard" CheckedChanged="RdWords_CheckedChanged" FontFamily="OpenSans-SemiBold"/>
         </StackLayout>
 
         <Button Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"   FontFamily="OpenSans-Bold" CornerRadius="10" Padding="5" Margin="10,10,0,0"  Text="Go"  FontSize="Medium" TextColor="White"   x:Name="btnGo" Clicked="btnGo_Clicked" HeightRequest="50" WidthRequest="100"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
